<resources>
    <string name="app_name">SmartRocket</string>
    <string name="click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="version_var" translatable="false">v.%1$s</string>
    <string name="your_email_hint">Your e-mail</string>
    <string name="your_password_hint">Your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_big">LOGIN</string>
    <string name="i_new_user">NEW USER</string>
    <string name="login_fail_dialog_title">SmartRocket login</string>
    <string name="internet_connection_is_bad">Your internet connection is unstable, please change source of
        internet.</string>
    <string name="credentials_wrong">The email or password you entered is incorrect. Please try again.</string>
    <string name="account_not_activated">Your SmartRocket account has not yet been activated. To use SmartRocket,
        please check your email and click the Activation Link. If you cannot find our message, check your junk/spam
        folder.</string>
    <string name="request_new_activation_link">Request New Activation Link</string>
    <string name="user_not_found_error_text">User Not Found</string>
    <string name="user_already_exists_error_text">User already exists</string>
    <string name="password_token_not_valid_error_text">Please use the latest generated password reset link.</string>
    <string name="zero" translatable="false">0</string>
    <string name="dollar_symbol" translatable="false">$</string>
    <string name="continue_register">CONTINUE</string>
    <string name="welcome_to_smart_rocket">Welcome to SmartRocket registration!</string>
    <string name="how_did_you_hear_about_us">How did you first hear about SmartRocket?</string>
    <string name="if_you_have_promo_code">If you have a Group Code please enter it now, otherwise click CONTINUE</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="your_birthday">Your birthday</string>
    <string name="your_country_hint">Your Country</string>
    <string name="your_city_hint">Your City</string>
    <string name="remember_me">Remember me</string>
    <string name="i_agree_with_matrix_term">I agree with SmartRocket Terms &amp; Conditions</string>
    <string name="confirm_and_register">REGISTER</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_big">CANCEL</string>
    <string name="ok">OK</string>
    <string name="show_password">Show password</string>
    <string name="password_validation_text">Your password must be 8-16 characters long with at least one upper-case
        letter, one lower-case letter, one number and one special character (!, @, #, $, etc).</string>
    <string name="user_already_exist">User already exists. Please enter a different email address.</string>
    <string name="fill_in_field">Please, fill in field</string>
    <string name="fill_in_all_fields">Please, complete all items</string>
    <string name="registration_form">SmartRocket registration</string>
    <string name="find_mission">New missions</string>
    <string name="my_missions">My missions</string>
    <string name="my_portal">MyPortal</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="rocket_points">Rocket Points</string>
    <string name="reputation">Reputation</string>
    <string name="level_name">Rank</string>
    <string name="logout">Logout</string>
    <string name="level_0" translatable="false">0</string>
    <string name="balance_0">0$</string>
    <string name="sorry">Sorry! SmartRocket is not recruiting in your area.</string>
    <string name="we_dont_have_available_tasks">Unfortunately,  we are not currently recruiting new members in your
        area, but we are adding new locations and members all the time. If you would like to be notified when we are
        recruiting in your area, please submit your email address below.</string>
    <string name="subscribe">SUBMIT</string>
    <string name="distance_to_nearest_location">Distance to the nearest location &lt;b>%1$s &lt;/b></string>
    <string name="distance_m">m</string>
    <string name="distance_km">km</string>
    <string name="show_hidden_projects">SHOW HIDDEN PROJECTS</string>
    <string name="hide_hidden_projects">HIDE HIDDEN PROJECTS</string>
    <string name="mission_expires_at">Mission due: %1$s</string>
    <string name="loading_missions">Loading Missions...</string>
    <string name="no_mission_available">There are currently no missions available in your area. \nPlease check back
        later to claim and complete new missions.</string>
    <string name="redo_mission">Re-do. Mission due: %1$s</string>
    <string name="send_latter_mission">Unsubmitted. Mission due: %1$s</string>
    <string name="mission_transmitting">Transmitting...%1$s</string>
    <string name="mission_in_validation">Mission in validation.</string>
    <string name="mission_rejected">Mission rejected.</string>
    <string name="mission_validated">Congratulations! Mission approved!</string>
    <string name="time_left">left</string>
    <string name="you_have_no_tasks">You have no current missions. \nGo to \"New Missions\" to claim and complete
        new missions.</string>
    <string name="app_settings_title">SmartRocket Settings</string>
    <string name="application_settings">APPLICATION SETTINGS</string>
    <string name="language">Language</string>
    <string name="location_services">Location services</string>
    <string name="push_messages">Push Messages/Emails</string>
    <string name="tree_g_upload_task_limit">3G upload limit per mission (MB)</string>
    <string name="tree_g_upload_month_limit">3G total monthly upload limit (MB)</string>
    <string name="social_sharing">Social sharing</string>
    <string name="save_images_to_camera_roll">Save images to Gallery</string>
    <string name="save_media_to_phone">Save media to Phone</string>
    <string name="send_only_by_wifi">Send information only by WiFi</string>
    <string name="notification_settings">NOTIFICATION SETTINGS</string>
    <string name="reminder">Reminder</string>
    <string name="deadline_warning">Mission deadline warning</string>
    <string name="app_version">Application version</string>
    <string name="unlimited">Unlimited</string>
    <string name="term_and_conditions"><u>TERMS &amp; CONDITIONS</u></string>
    <string name="term_and_conditions_title">Terms &amp; Conditions</string>
    <string name="close_account_title">Delete SmartRocket Account</string>
    <string name="close_account_btn">Delete my SmartRocket Account</string>
    <string name="close_account_text">WARNING: pressing \'Delete Account\' will permanently delete this SmartRocket Account. You will forfeit any remaining SmartRocket cash balance. This action cannot be undone.</string>
    <string name="close_account">DELETE ACCOUNT</string>
    <string name="share_title">Share</string>
    <string name="share_text">I\'ve been having fun (and making money) with SmartRocket app
        for Android Smartphones. \n\nIf you want to join me, you can learn more here</string>
    <string name="tell_your_friends_about">Tell your friends about \n SmartRocket!</string>
    <string name="share_via_email">E-MAIL</string>
    <string name="share_via_message">MESSAGE</string>
    <string name="share_via_twitter">TWITTER</string>
    <string name="share_via_facebook">FACEBOOK</string>
    <string name="share_via_linkedin">LinkedIn</string>
    <string name="share_via_whatsapp">WhatsApp</string>
    <string name="share_via_wechat">We Chat</string>
    <string name="share_via_tencent_weibo">Tencent Weibo</string>
    <string name="share_via_sina_weibo">Sina Weibo</string>
    <string name="share_via_qzone">QZone</string>
    <string name="toast_sharing_disable_in_settings">Sorry, Social Sharing disabled in the settings.</string>
    <string name="task_detail_title">%1$s</string>
    <string name="task_distance_away">%1$s %2$s away</string>
    <string name="m_to_km_with_text_mask">%1$s %2$s</string>
    <string name="start_time">START: </string>
    <string name="available">AVAILABLE: </string>
    <string name="mission_available">Mission available: %1$s</string>
    <string name="status">STATUS: </string>
    <string name="deadline_time">DEADLINE: </string>
    <string name="mission_due">MISSION DUE: </string>
    <string name="duration_time">EXPIRY: </string>
    <string name="due_in">DUE IN: </string>
    <string name="mission_address">MISSION ADDRESS</string>
    <string name="no_mission_address">This mission has not preset location</string>
    <string name="full_description">MISSION DESCRIPTION</string>
    <string name="book_this_task">CLAIM</string>
    <string name="start_this_task">START NOW</string>
    <string name="hide_task">HIDE MISSION</string>
    <string name="show_task">SHOW MISSION</string>
    <string name="withdraw_task">WITHDRAW</string>
    <string name="continue_task">CONTINUE</string>
    <string name="approved_task">Approved</string>
    <string name="rejected_task">Rejected</string>
    <string name="in_validation_task">In Validation</string>
    <string name="approved_at">Approved at:</string>
    <string name="rejected_at">Rejected at:</string>
    <string name="submitted_at">Submitted at:</string>
    <string name="wave_missions_description">FULL DESCRIPTION</string>
    <string name="show_missions">SHOW MISSIONS</string>
    <string name="hide_missions">HIDE MISSIONS</string>
    <string name="task_location_title">Mission location</string>
    <string name="since_jobs">Before registration, we need to check if there are tasks available in your location.
        You will need to be connected to the internet and have Location Services enabled.</string>
    <string name="check_my_location">CHECK MY LOCATION</string>
    <string name="error">Error.</string>
    <string name="success">Success.</string>
    <string name="no_internet">Please turn ON internet connection.</string>
    <string name="your_version_outdated">Your version of SmartRocket is Outdated. Please update it to access the application</string>
    <string name="turn_on_location_dialog_title">Location services</string>
    <string name="enter_here">Enter here</string>
    <string name="reset_password_text1">Reset password</string>
    <string name="reset_password_text2">Please enter a new password below.</string>
    <string name="submit">SUBMIT</string>
    <string name="key_one" translatable="false">1</string>
    <string name="key_two" translatable="false">2</string>
    <string name="key_three" translatable="false">3</string>
    <string name="key_four" translatable="false">4</string>
    <string name="key_five" translatable="false">5</string>
    <string name="key_six" translatable="false">6</string>
    <string name="key_seven" translatable="false">7</string>
    <string name="key_eight" translatable="false">8</string>
    <string name="key_nine" translatable="false">9</string>
    <string name="key_zero" translatable="false">0</string>
    <string name="key_dot" translatable="false">.</string>
    <string name="key_backspace" translatable="false">&lt;--</string>
    <string name="english" translatable="false">English</string>
    <string name="chinese_simple" translatable="false">中文（简体）</string>
    <string name="chinese_traditional_hk" translatable="false">繁中 (香港)</string>
    <string name="chinese_traditional_tw" translatable="false">繁中 (臺灣)</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="indonesian" translatable="false">Bahasa Indonesia</string>
    <string name="malaysian" translatable="false">Bahasa Malayu</string>
    <string name="french" translatable="false">Français</string>
</resources>