<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/lanEnglish"
        android:title="@string/english" />
    <item
        android:id="@+id/lanChineseSimple"
        android:title="@string/chinese_simple" />
    <item
        android:id="@+id/lanChineseTraditionalHK"
        android:title="@string/chinese_traditional_hk" />
    <item
        android:id="@+id/lanChineseTraditionalTW"
        android:title="@string/chinese_traditional_tw" />
    <item
        android:id="@+id/lanFrance"
        android:title="@string/french" />
    <item
        android:id="@+id/lanArabic"
        android:title="@string/arabic" />
    <item
        android:id="@+id/lanIndonesian"
        android:title="@string/indonesian" />
    <item
        android:id="@+id/lanMalaya"
        android:title="@string/malaysian" />
</menu>