<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="45dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_color" />

        <com.ros.smartrocket.ui.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/tell_your_friends_about"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_18sp"
            custom:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_light"
            android:orientation="vertical"
            android:padding="10dp">

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/emailButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green_selector"
                android:drawableStart="@drawable/share_icon_mail"
                android:text="@string/share_via_email"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/facebookButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_fb_selector"
                android:drawableStart="@drawable/share_icon_fb"
                android:text="@string/share_via_facebook"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/linkedinButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_linked_selector"
                android:drawableStart="@drawable/share_icon_linked"
                android:text="@string/share_via_linkedin"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/messageButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green_selector"
                android:drawableStart="@drawable/share_icon_message"
                android:text="@string/share_via_message"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/sinaWeiboButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sina_selector"
                android:drawableStart="@drawable/share_icon_sina"
                android:text="@string/share_via_sina_weibo"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/tencentWeiboButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tencent_selector"
                android:drawableStart="@drawable/share_icon_tencent"
                android:text="@string/share_via_tencent_weibo"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/twitterButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_twitter_selector"
                android:drawableStart="@drawable/share_icon_twitter"
                android:text="@string/share_via_twitter"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/wechatButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_wechat_selector"
                android:drawableStart="@drawable/share_icon_wechat"
                android:text="@string/share_via_wechat"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/whatsappButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_whats_selector"
                android:drawableStart="@drawable/share_icon_whats"
                android:text="@string/share_via_whatsapp"
                custom:textStyle="bold" />

            <com.ros.smartrocket.ui.views.CustomButton
                android:id="@+id/qzoneButton"
                style="@style/ShareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_qzone_selector"
                android:drawableStart="@drawable/share_icon_qzone"
                android:text="@string/share_via_qzone"
                custom:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>