<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >
    <ImageView
        android:id="@+id/logo"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_color" />
    <com.ros.smartrocket.views.CustomTextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/black"
        custom:textStyle="bold"
        android:text="@string/reset_password_text1" />
    <com.ros.smartrocket.views.CustomTextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:text="@string/reset_password_text2"
        custom:textStyle="light" />
    <com.ros.smartrocket.views.CustomEditTextView
        android:id="@+id/passwordEditText"
        style="@style/EditText"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/pass_icon"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:hint="@string/password" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <com.ros.smartrocket.views.CustomSwitch
            android:id="@+id/showPasswordToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.ros.smartrocket.views.CustomTextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/grey"
            android:gravity="center_vertical"
            android:text="@string/show_password" />
    </LinearLayout >
    <com.ros.smartrocket.views.CustomTextView
        android:id="@+id/passwordValidationText"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/red"
        android:gravity="center_vertical"
        android:text="@string/password_validation_text"
        android:visibility="gone" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <com.ros.smartrocket.views.CustomButton
        android:id="@+id/setPasswordButton"
        style="@style/Button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:drawablePadding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_green_selector"
        android:text="@string/submit"
        custom:textStyle="bold" />
</LinearLayout >